cluster/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    external-dns.alpha.kubernetes.io/hostname: argocd.kng.house
    external-dns.alpha.kubernetes.io/target: 10.0.2.75
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - argocd.kng.house
      secretName: argocd-tls
  rules:
    - host: argocd.kng.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
